July 2005

The 'PlotMenu' plug-in provides the infrastructure for adding pop-menus for splot's, i.e. panels on displays.
These are potentially contentious, but are convenient at least for sophisticated users. As plugins,
they work well as an optional add-on.  We can add functionality to this module and splot's as desired.


Drag and drop for parallel coordinates displays.  One can drag a "panel" onto another panel
and currently they get swapped in position.  Different strategies for inserting the initial
panel beside the target one and moving those in between is easily done also.


Two routines added to the "API": ggobi_data_set_var_type and ggobi_data_set_time_var to allow
for users to specify the type of a variable and whether it is a time variable or not.


Menu item added to each display to bring the associated control panel to the foreground.

Option to use check menu items for the interactive modes for a display, i.e. Scale, Brush, Identify, ...
This gives a visual display of what is the currently active mode and also a way to turn it off
directly rather than requiring to switch to a different, display-dependent mode, e.g. XYPlot.
  In ggobirc as <useRadioMenuItems on="true" />



Internal changes
   removed (ifdef'ed away) the calls to display_add() for each of the display types.
   These resulted in display_add being called twice: there and via the extended_display_open_cb.
   This fixes the message about "Display has already been added...." appearing.

   Information about mismatching structure sizes for plugins and "modules" (i.e. Rggobi) announce  which 
   module is complaining.  (Added the GGobiPluginDetails to the call to checkGGobiStructSizes().)




June 2005

Paused tours  were causing problems with consuming large amount of
	cycles. This seems to be fixed now.


time variables  In the XML files, one can specify that a variable can
	be used as a time variable using an attribute time.  The value