@@ -566,6 +566,7 @@ typedef enum { DATAD_ADDED_SIGNAL,
   VARIABLE_SELECTION_SIGNAL,
   STICKY_POINT_ADDED_SIGNAL, STICKY_POINT_REMOVED_SIGNAL,
   CLUSTERS_CHANGED_SIGNAL,       /*-- ggvis wants this --*/
+  DISPLAY_NEW_SIGNAL,
   MAX_GGOBI_SIGNALS
 } GGobiSignalType;
 
