@@ -1,5 +1,11 @@
 July 2005
 
+New signal added for the creation of a new displayd object. This is emitted after the display is fully constructed 
+and is being registered.  We will miss a display if it is constructed separately and not explicitly added to the
+collection of known displays.  But that currently never happens and will be rare even when we instantiate the
+classes outside of the ggobi control panel, e.g. in RGtk.
+
+
 The 'PlotMenu' plug-in provides the infrastructure for adding pop-menus for splot's, i.e. panels on displays.
 These are potentially contentious, but are convenient at least for sophisticated users. As plugins,
 they work well as an optional add-on.  We can add functionality to this module and splot's as desired.
